<resources>
    <string name="app_name">Первое Приложение</string>
    <string name="domain_prompt">Выберите область</string>
    <string name="day_prompt">Выберите День</string>
    <string name="month_prompt">Выберите Месяц</string>
    <string name="year_prompt">Выберите Год</string>
    <string name="exp_date">Дата проведения испытания</string>
    <string name="hello_maxim">Привет, Максим Шавва!</string>
    <string name="radio_button1">Круглая Кнопка 1</string>
    <string name="radio_button2">Круглая Кнопка 2</string>
    <string name="radio_button3">Круглая Кнопка 3</string>
    <string name="radio_button4">Круглая Кнопка 4</string>
    <string name="button_left">Кнопка</string>
    <string name="button_right">Кнопка</string>
    <string name="city">Город</string>
    <string name="estate_name">Имя объекта</string>
    <string name="address">Адрес</string>
    <string name="street_home">Улица и дом</string>
    <string name="customer_name">ФИО заказчика</string>
    <string name="air_heat">Температура воздуха</string>
    <string name="humidity">Влажность воздуха</string>
    <string name="pressure">Атмосферное давление</string>
    <string name="report_number">Номер отчета</string>
    <string-array name="domain_arrays">
        <item>Выберите область</item>
        <item>Московская</item>
        <item>СПб</item>
    </string-array>
    <string-array name="day_arrays">
        <item>День</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month_arrays">
        <item>Месяц</item>
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string-array name="year_arrays">
        <item>Год</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
</resources>
